@@ -1553,6 +1553,9 @@ Mozilla/1.22 (compatible; MSIE 2.0; Windows 95)
 Device-Desktop
 Device-NoPhone
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-2
+BrowserEngine-Trident-MSIE-2-0
 Browser-MSIE
 Browser-DesktopMSIE
 Browser-DesktopMSIE-2
@@ -1571,6 +1574,9 @@ Browser-DesktopMSIE-3
 Browser-DesktopMSIE-3-0
 Browser-DesktopMSIE-3-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-3
+BrowserEngine-Trident-MSIE-3-0
 BrowserOS-Windows
 BrowserOS-Windows-95
 
@@ -1584,6 +1590,9 @@ Browser-DesktopMSIE-4
 Browser-DesktopMSIE-4-0
 Browser-DesktopMSIE-4-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-4
+BrowserEngine-Trident-MSIE-4-0
 BrowserOS-Windows
 BrowserOS-Windows-95
 
@@ -1592,6 +1601,10 @@ Mozilla/4.0 (compatible; MSIE 4.01; Windows NT 5.0)
 Device-Desktop
 Device-NoPhone
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-4
+BrowserEngine-Trident-MSIE-4-0
+BrowserEngine-Trident-MSIE-4-0-1
 Browser-MSIE
 Browser-DesktopMSIE
 Browser-DesktopMSIE-4
@@ -1608,6 +1621,10 @@ Mozilla/4.0 (compatible; MSIE 4.01; Windows NT 5.01)
 Device-Desktop
 Device-NoPhone
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-4
+BrowserEngine-Trident-MSIE-4-0
+BrowserEngine-Trident-MSIE-4-0-1
 Browser-MSIE
 Browser-DesktopMSIE
 Browser-DesktopMSIE-4
@@ -1630,6 +1647,10 @@ Browser-DesktopMSIE-4
 Browser-DesktopMSIE-4-0
 Browser-DesktopMSIE-4-0-1
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-4
+BrowserEngine-Trident-MSIE-4-0
+BrowserEngine-Trident-MSIE-4-0-1
 BrowserOS-NIX
 BrowserOS-HPUX
 
@@ -1643,6 +1664,9 @@ Browser-DesktopMSIE-4
 Browser-DesktopMSIE-4-5
 Browser-DesktopMSIE-4-5-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-4
+BrowserEngine-Trident-MSIE-4-5
 BrowserOS-MacOS
 
 # Internet Explorer 5.0 on Mac PPC
@@ -1681,6 +1705,9 @@ Browser-DesktopMSIE-5
 Browser-DesktopMSIE-5-0
 Browser-DesktopMSIE-5-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-5
+BrowserEngine-Trident-MSIE-5-0
 BrowserOS-Windows
 BrowserOS-Windows-98
 
@@ -1694,6 +1721,9 @@ Browser-DesktopMSIE-5
 Browser-DesktopMSIE-5-0
 Browser-DesktopMSIE-5-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-5
+BrowserEngine-Trident-MSIE-5-0
 BrowserOS-Windows
 BrowserOS-Windows-98
 
@@ -1707,6 +1737,9 @@ Browser-DesktopMSIE-5
 Browser-DesktopMSIE-5-0
 Browser-DesktopMSIE-5-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-5
+BrowserEngine-Trident-MSIE-5-0
 BrowserOS-Windows
 BrowserOS-Windows-ME
 
@@ -1720,6 +1753,9 @@ Browser-DesktopMSIE-5
 Browser-DesktopMSIE-5-0
 Browser-DesktopMSIE-5-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-5
+BrowserEngine-Trident-MSIE-5-0
 BrowserOS-Windows
 BrowserOS-Windows-ME
 
@@ -1733,6 +1769,10 @@ Browser-DesktopMSIE-5
 Browser-DesktopMSIE-5-0
 Browser-DesktopMSIE-5-0-1
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-5
+BrowserEngine-Trident-MSIE-5-0
+BrowserEngine-Trident-MSIE-5-0-1
 BrowserOS-Windows
 BrowserOS-Windows-98
 
@@ -1745,7 +1785,7 @@ Browser-DesktopMSIE
 Browser-DesktopMSIE-5
 Browser-DesktopMSIE-5-1
 Browser-DesktopMSIE-5-1-7
-BrowserEngine-Trident
+BrowserEngine-Tasman
 BrowserOS-MacOS
 
 # Internet Explorer 5.22 on Mac OS
@@ -1757,7 +1797,7 @@ Browser-DesktopMSIE
 Browser-DesktopMSIE-5
 Browser-DesktopMSIE-5-2
 Browser-DesktopMSIE-5-2-2
-BrowserEngine-Trident
+BrowserEngine-Tasman
 BrowserOS-MacOS
 
 # Internet Explorer 5.5 on Windows NT
@@ -1770,6 +1810,10 @@ Browser-DesktopMSIE-5
 Browser-DesktopMSIE-5-5
 Browser-DesktopMSIE-5-5-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-5
+BrowserEngine-Trident-MSIE-5-5
+BrowserEngine-Trident-MSIE-5-5-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 
@@ -1783,6 +1827,9 @@ Browser-DesktopMSIE-5
 Browser-DesktopMSIE-5-5
 Browser-DesktopMSIE-5-5-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-5
+BrowserEngine-Trident-MSIE-5-5
 BrowserOS-Windows
 BrowserOS-Windows-98
 
@@ -1791,6 +1838,9 @@ Mozilla/6.0 (compatible; MSIE 6.0; Windows 3.11 For workgroups; {6BD3E7C1-0732-4
 Device-Desktop
 Device-NoPhone
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-6
+BrowserEngine-Trident-MSIE-6-0
 Browser-MSIE
 Browser-DesktopMSIE
 Browser-DesktopMSIE-6
@@ -1806,6 +1856,9 @@ Mozilla/4.0 (compatible; MSIE 6.0; Windows 98; Win 9x 4.90; T-Online Internatina
 Device-Desktop
 Device-NoPhone
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-6
+BrowserEngine-Trident-MSIE-6-0
 Browser-MSIE
 Browser-DesktopMSIE
 Browser-DesktopMSIE-6
@@ -1819,6 +1872,9 @@ Mozilla/5.41 (compatible; MSIE 6.0b; Windows NT 4.0)
 Device-Desktop
 Device-NoPhone
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-6
+BrowserEngine-Trident-MSIE-6-0
 Browser-MSIE
 Browser-DesktopMSIE
 Browser-DesktopMSIE-6
@@ -1839,6 +1895,9 @@ Browser-DesktopMSIE-6
 Browser-DesktopMSIE-6-0
 Browser-DesktopMSIE-6-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-6
+BrowserEngine-Trident-MSIE-6-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-4
@@ -1854,6 +1913,9 @@ Browser-DesktopMSIE-6
 Browser-DesktopMSIE-6-0
 Browser-DesktopMSIE-6-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-6
+BrowserEngine-Trident-MSIE-6-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -1870,6 +1932,9 @@ Browser-DesktopMSIE-6
 Browser-DesktopMSIE-6-0
 Browser-DesktopMSIE-6-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-6
+BrowserEngine-Trident-MSIE-6-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -1886,6 +1951,9 @@ Browser-DesktopMSIE-6
 Browser-DesktopMSIE-6-0
 Browser-DesktopMSIE-6-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-6
+BrowserEngine-Trident-MSIE-6-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -1902,6 +1970,9 @@ Browser-DesktopMSIE-6
 Browser-DesktopMSIE-6-0
 Browser-DesktopMSIE-6-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-6
+BrowserEngine-Trident-MSIE-6-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -1918,6 +1989,9 @@ Browser-DesktopMSIE-7
 Browser-DesktopMSIE-7-0
 Browser-DesktopMSIE-7-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-7
+BrowserEngine-Trident-MSIE-7-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -1934,6 +2008,9 @@ Browser-DesktopMSIE-7
 Browser-DesktopMSIE-7-0
 Browser-DesktopMSIE-7-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-7
+BrowserEngine-Trident-MSIE-7-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -1950,6 +2027,9 @@ Browser-DesktopMSIE-7
 Browser-DesktopMSIE-7-0
 Browser-DesktopMSIE-7-0-0
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-7
+BrowserEngine-Trident-MSIE-7-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-6
@@ -1969,6 +2049,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
 BrowserEngine-Trident-4-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-8
+BrowserEngine-Trident-MSIE-8-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -1989,6 +2072,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
 BrowserEngine-Trident-4-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-8
+BrowserEngine-Trident-MSIE-8-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -2008,6 +2094,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
 BrowserEngine-Trident-4-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-8
+BrowserEngine-Trident-MSIE-8-0
 BrowserEngine-ChromeFrame
 BrowserEngine-ChromeFrame-13
 BrowserEngine-ChromeFrame-13-0
@@ -2032,6 +2121,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
 BrowserEngine-Trident-4-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-8
+BrowserEngine-Trident-MSIE-8-0
 BrowserEngine-ChromeFrame
 BrowserOS-Windows
 BrowserOS-Windows-NT
@@ -2052,6 +2144,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
 BrowserEngine-Trident-4-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-8
+BrowserEngine-Trident-MSIE-8-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -2067,6 +2162,9 @@ Browser-DesktopMSIE
 Browser-DesktopMSIE-8
 Browser-DesktopMSIE-8-0
 Browser-DesktopMSIE-8-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-8
+BrowserEngine-Trident-MSIE-8-0
 BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
@@ -2086,6 +2184,9 @@ Browser-DesktopMSIE
 Browser-DesktopMSIE-8
 Browser-DesktopMSIE-8-0
 Browser-DesktopMSIE-8-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-8
+BrowserEngine-Trident-MSIE-8-0
 BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
@@ -2105,6 +2206,9 @@ Browser-DesktopMSIE
 Browser-DesktopMSIE-8
 Browser-DesktopMSIE-8-0
 Browser-DesktopMSIE-8-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-8
+BrowserEngine-Trident-MSIE-8-0
 BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
@@ -2128,6 +2232,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
 BrowserEngine-Trident-4-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-8
+BrowserEngine-Trident-MSIE-8-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-6
@@ -2147,6 +2254,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-5
 BrowserEngine-Trident-5-0
 BrowserEngine-Trident-5-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-9
+BrowserEngine-Trident-MSIE-9-0
 BrowserEngine-ChromeFrame
 BrowserEngine-ChromeFrame-11
 BrowserEngine-ChromeFrame-11-0
@@ -2171,6 +2281,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-5
 BrowserEngine-Trident-5-0
 BrowserEngine-Trident-5-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-9
+BrowserEngine-Trident-MSIE-9-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-6
@@ -2190,6 +2303,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-5
 BrowserEngine-Trident-5-0
 BrowserEngine-Trident-5-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-9
+BrowserEngine-Trident-MSIE-9-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-6
@@ -2209,6 +2325,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-5
 BrowserEngine-Trident-5-0
 BrowserEngine-Trident-5-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-7
+BrowserEngine-Trident-MSIE-7-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-6
@@ -2228,6 +2347,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-6
 BrowserEngine-Trident-6-0
 BrowserEngine-Trident-6-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-10
+BrowserEngine-Trident-MSIE-10-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-6
@@ -2247,6 +2369,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-6
 BrowserEngine-Trident-6-0
 BrowserEngine-Trident-6-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-10
+BrowserEngine-Trident-MSIE-10-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-6
@@ -2266,6 +2391,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-6
 BrowserEngine-Trident-6-0
 BrowserEngine-Trident-6-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-7
+BrowserEngine-Trident-MSIE-7-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-6
@@ -2285,6 +2413,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-6
 BrowserEngine-Trident-6-0
 BrowserEngine-Trident-6-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-10
+BrowserEngine-Trident-MSIE-10-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-6
@@ -2305,6 +2436,10 @@ BrowserEngine-Trident
 BrowserEngine-Trident-6
 BrowserEngine-Trident-6-0
 BrowserEngine-Trident-6-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-10
+BrowserEngine-Trident-MSIE-10-0
+BrowserEngine-Trident-MSIE-10-0-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-7
@@ -2425,6 +2560,9 @@ Browser-Sleipnir-2
 Browser-Sleipnir-2-8
 Browser-Sleipnir-2-8-1
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-6
+BrowserEngine-Trident-MSIE-6-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -2439,6 +2577,9 @@ Browser-Sleipnir
 Browser-Sleipnir-2
 Browser-Sleipnir-2-8
 Browser-Sleipnir-2-8-4
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-7
+BrowserEngine-Trident-MSIE-7-0
 BrowserEngine-Trident
 BrowserOS-Windows
 BrowserOS-Windows-NT
@@ -2458,6 +2599,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
 BrowserEngine-Trident-4-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-7
+BrowserEngine-Trident-MSIE-7-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-6
@@ -2476,6 +2620,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
 BrowserEngine-Trident-4-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-8
+BrowserEngine-Trident-MSIE-8-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-6
@@ -2541,6 +2688,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
 BrowserEngine-Trident-4-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-7
+BrowserEngine-Trident-MSIE-7-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -2565,6 +2715,9 @@ Browser-Lunascape-5
 Browser-Lunascape-5-0
 Browser-Lunascape-5-0-3
 Browser-Lunascape-5-0-3-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-7
+BrowserEngine-Trident-MSIE-7-0
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -2616,7 +2769,7 @@ BrowserOS-Windows-XP
 # Maxthon
 #-----------------------------------------------------------------------------
 
-# Maxthon 2.0 on Windows Vista - using Trident engine (TODO: Should it recognize Trident 5.0 ?)
+# Maxthon 2.0 on Windows Vista - using Trident engine
 Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/4.0; WOW64; Trident/5.0; SLCC2; .NET CLR 2.0.50727; .NET CLR 3.5.30729; .NET CLR 3.0.30729; Media Center PC 6.0; Zune 4.0; InfoPath.3; MS-RTC LM 8; .NET4.0C; .NET4.0E; Maxthon 2.0)
 Device-Desktop
 Device-NoPhone
@@ -2624,6 +2777,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
 BrowserEngine-Trident-4-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-9
+BrowserEngine-Trident-MSIE-9-0
 Browser-Maxthon
 Browser-Maxthon-2
 Browser-Maxthon-2-0
@@ -2643,6 +2799,9 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
 BrowserEngine-Trident-4-0-0
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-7
+BrowserEngine-Trident-MSIE-7-0
 Browser-Maxthon
 Browser-Maxthon-2
 Browser-Maxthon-2-0
@@ -5000,6 +5159,7 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-0
 BrowserEngine-Trident-4-0-0
+BrowserEngine-Trident-MSIE
 BrowserOS-Windows
 BrowserOS-Windows-NT
 BrowserOS-Windows-NT-5
@@ -5067,6 +5227,35 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-5
 BrowserEngine-Trident-4-5-22
+BrowserEngine-Trident-MSIE
+BrowserOS-NIX
+BrowserOS-BSD
+
+# Made up - Tablet
+MyOwnBrowser; BruteBSD 0.9; [Trident/4.5.22]; en; Tablet/22; Mobile
+Device-Mobile
+Device-Tablet
+Device-NoPhone
+BrowserEngine-Trident
+BrowserEngine-Trident-4
+BrowserEngine-Trident-4-5
+BrowserEngine-Trident-4-5-22
+BrowserEngine-Trident-MSIE
+BrowserOS-NIX
+BrowserOS-BSD
+
+# Made up - like MSIE 4.5
+MyOwnBrowser; Firefox; BruteBSD 0.9; [Trident/4.5.22]; en; MSIE 4.5
+Device-Desktop
+Device-NoPhone
+Browser-Firefox
+BrowserEngine-Trident
+BrowserEngine-Trident-4
+BrowserEngine-Trident-4-5
+BrowserEngine-Trident-4-5-22
+BrowserEngine-Trident-MSIE
+BrowserEngine-Trident-MSIE-4
+BrowserEngine-Trident-MSIE-4-5
 BrowserOS-NIX
 BrowserOS-BSD
 
@@ -5078,6 +5267,7 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-5
 BrowserEngine-Trident-4-5-22
+BrowserEngine-Trident-MSIE
 BrowserOS-NIX
 BrowserOS-BSD
 
@@ -5089,6 +5279,7 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-5
 BrowserEngine-Trident-4-5-22
+BrowserEngine-Trident-MSIE
 BrowserOS-NIX
 BrowserOS-BSD
 
@@ -5100,6 +5291,7 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-5
 BrowserEngine-Trident-4-5-22
+BrowserEngine-Trident-MSIE
 BrowserOS-NIX
 BrowserOS-BSD
 
@@ -5111,6 +5303,7 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-5
 BrowserEngine-Trident-4-5-22
+BrowserEngine-Trident-MSIE
 BrowserOS-NIX
 BrowserOS-BSD
 
@@ -5122,6 +5315,7 @@ BrowserEngine-Trident
 BrowserEngine-Trident-4
 BrowserEngine-Trident-4-5
 BrowserEngine-Trident-4-5-22
+BrowserEngine-Trident-MSIE
 BrowserOS-NIX
 BrowserOS-BSD
 
@@ -5130,6 +5324,7 @@ MyOwnBrowser; Win3.11 0.9; MSIE [en]
 Device-Desktop
 Device-NoPhone
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
 Browser-MSIE
 Browser-DesktopMSIE
 BrowserOS-Windows
@@ -5142,6 +5337,7 @@ MyOwnBrowser; Win3.11 0.9; MSIE/Windows [en]
 Device-Desktop
 Device-NoPhone
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
 Browser-MSIE
 Browser-DesktopMSIE
 BrowserOS-Windows
@@ -5154,4 +5350,5 @@ MyOwnBrowser; Windows; Trident/unknown; (null)
 Device-Desktop
 Device-NoPhone
 BrowserEngine-Trident
+BrowserEngine-Trident-MSIE
 BrowserOS-Windows
